--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -5,6 +5,19 @@
     <title>Too Good To Throw 1</title>
 </head>
 <body>
+
     <h1>Too Good To Throw 2</h1>
+    <a href="/listFood">
+        <button class="btn-create btn" id="btn-create">Find overskudsmad</button>
+    </a>
+    <br>
+    <br>
+    Madspildet i den danske servicesektor udgør 227.000-ton pr. år. Til sammenligning er det samlede madspild fra husholdningerne 261.000-ton pr. år.<br>
+    Det største madspild i servicesektoren stammer fra detailhandelen, der spilder 163.000 tons pr. år, svarende til 72 % af servicesektorens madspild.<br>
+    Af detailhandelens madspild står specialforretninger som slagtere, fiskeforretninger og grønthandlere for 12.000 tons pr. år, mens ikke-specialiserede forretninger som kiosker, købmænd, supermarkeder og varehuse står for 151.000-ton pr. år.
+    <br>
+    Kilde: Kortlægning af madaffald i servicesektoren og Kortlægning af dagrenovation i Danmark
+
+
 </body>
 </html>
