--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Too Good To Throw 1</title>
+    <link rel="stylesheet" type="text/css" href="MyCSS.css">
 </head>
 <body>
+    Sælg overskudsmad
+    <a href="/createVirksomhed">
+        <button class="btn-createVirksomhed btn" id="btn-createVirsomhed">Virksomhed</button>
+    </a>
+
+    <a href="/createOrganisation">
+        <button class="btn-createOrganisation btn" id="btn-createOrganisation">Organisation</button>
+    </a>
 
     <h1>Too Good To Throw 2</h1>
     <a href="/listFood">
