--- a/src/main/resources/templates/home/viewOneFood.html
+++ b/src/main/resources/templates/home/viewOneFood.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="MyCSS.css">
 </head>
 <body>
+    <a href="/">
+        <button class="btn-index btn" id="btn-index">Til forsiden</button>
+    </a>
     <h1>Køb denne madvare</h1>
     <p>Id: <span th:text="${madvare.id}"/></p>
     <p>Madnavn: <span th:text="${madvare.madnavn}"/></p>
