--- a/src/main/resources/templates/home/listFood.html
+++ b/src/main/resources/templates/home/listFood.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" type="text/css" href="MyCSS.css">
 </head>
 <body>
-<h1>Overskudsmad</h1>
-<a href="/create">
-    <button class="btn-create btn" id="btn-create">Opret ny mad</button>
+<a href="/">
+    <button class="btn-index btn" id="btn-index">Til forsiden</button>
 </a>
-
+<h1>Overskudsmad</h1>
 <table>
     <thead>
     <tr>
