--- a/src/main/resources/templates/home/createVirksomhed.html
+++ b/src/main/resources/templates/home/createVirksomhed.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="MyCSS.css">
 </head>
 <body>
+<img src="/images/logo.png" alt="Too Good To Throw Logo" class="logo">
     <a href="/">
         <button class="btn-index btn" id="btn-index">Til forsiden</button>
     </a>
