Køb knap fjerner madvaren

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Too Good To Throw 1</title>
+    <title>Too Good To Throw</title>
     <link rel="stylesheet" type="text/css" href="MyCSS.css">
 </head>
 <body>
