--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -43,3 +43,10 @@ tr:nth-child(even) {
 #btn-updateOne {
     background-color: blue; /* Grøn for update-knap */
 }
+.logo {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 100px; /* Adjust size as needed */
+    height: auto;
+}
