--- a/src/main/resources/templates/home/viewOneFood.html
+++ b/src/main/resources/templates/home/viewOneFood.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="MyCSS.css">
+    <link rel="stylesheet" type="text/css" href="MyCss.css">
 </head>
 <body>
 <img src="/images/logo.png" alt="Too Good To Throw Logo" class="logo">
