CSS virker nu på vis madvare-siden

--- a/src/main/resources/templates/home/viewOneFood.html
+++ b/src/main/resources/templates/home/viewOneFood.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="MyCss.css">
+    <title>Selected food</title>
+    <link rel="stylesheet" type="text/css" href="/MyCss.css">
 </head>
 <body>
 <img src="/images/logo.png" alt="Too Good To Throw Logo" class="logo">
@@ -14,7 +14,6 @@
     <p>Id: <span th:text="${madvare.id}"/></p>
     <p>Madnavn: <span th:text="${madvare.madnavn}"/></p>
     <p>Pris: <span th:text="${madvare.pris}"/></p>
-    <p>Antal: <span th:text="${madvare.antal}"/></p>
     <p>Udløbsdato: <span th:text="${madvare.udlobsdato}"/></p>
     <p>Afhentningsadresse: <span th:text="${madvare.adresse}"/></p>
     <p>Virksomhed: <span th:text="${madvare.virksomhed}"/></p>
