--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -17,7 +17,7 @@ tr:nth-child(even) {
 }
 
 .btn {
-    background-color: #4CAF50; /* Standard grøn */
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 4px 4px;
@@ -29,24 +29,102 @@ tr:nth-child(even) {
 }
 
 .btn-create {
-    /* Ingen specifik stil angivet her */
 }
 
 #btn-viewOne {
-    background-color: #4CAF50; /* Grøn for view-knap */
+    background-color: #4CAF50;
 }
 
 #btn-deleteOne {
-    background-color: red; /* Rød for delete-knap */
+    background-color: red;
 }
 
 #btn-updateOne {
-    background-color: blue; /* Grøn for update-knap */
+    background-color: blue;
 }
+
 .logo {
     position: absolute;
     top: 20px;
     right: 20px;
-    width: 100px; /* Adjust size as needed */
+    width: 100px;
     height: auto;
+}
+
+.madspild-info {
+    border: 2px solid #4CAF50;
+    padding: 20px;
+    margin-bottom: 15px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    text-align: left;
+    max-width: 800px;
+    margin: 0 auto;
+    line-height: 1.6;
+}
+
+.madspild-info p {
+    margin-bottom: 15px;
+}
+
+.overskudsmad-container {
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
+.overskudsmad-container h2 {
+    color: #4CAF50;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.overskudsmad-container h3 {
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 18px;
+    color: #4CAF50;
+    vertical-align: middle;
+}
+
+.btn {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    margin: 5px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #45a049;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.centered-content {
+    text-align: center;
+    margin-top: 200px;
+}
+
+.centered-content h1 {
+    font-size: 32px;
+    color: #4CAF50;
+    margin-bottom: 15px;
+}
+
+.btn-create {
+    padding: 10px 20px;
+    font-size: 16px;
+}
+
+.eller-text {
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 18px;
+    color: #4CAF50;
+    vertical-align: middle;
 }
