--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -7,26 +7,40 @@
 </head>
 <body>
 <img src="/images/logo.png" alt="Too Good To Throw Logo" class="logo">
-    Sælg overskudsmad
+<div class="overskudsmad-container">
+    <h2>Sælg overskudsmad som:</h2>
     <a href="/createVirksomhed">
-        <button class="btn-createVirksomhed btn" id="btn-createVirsomhed">Virksomhed</button>
+        <button class="btn btn-createVirksomhed">Virksomhed</button>
     </a>
-
+    <h3 class="eller-text">Eller</h3>
     <a href="/createOrganisation">
-        <button class="btn-createOrganisation btn" id="btn-createOrganisation">Organisation</button>
+        <button class="btn btn-createOrganisation">Organisation</button>
     </a>
+</div>
 
+<div class="centered-content">
     <h1>Too Good To Throw 2</h1>
     <a href="/listFood">
         <button class="btn-create btn" id="btn-create">Find overskudsmad</button>
     </a>
+</div>
+
+<br>
     <br>
-    <br>
-    Madspildet i den danske servicesektor udgør 227.000-ton pr. år. Til sammenligning er det samlede madspild fra husholdningerne 261.000-ton pr. år.<br>
-    Det største madspild i servicesektoren stammer fra detailhandelen, der spilder 163.000 tons pr. år, svarende til 72 % af servicesektorens madspild.<br>
-    Af detailhandelens madspild står specialforretninger som slagtere, fiskeforretninger og grønthandlere for 12.000 tons pr. år, mens ikke-specialiserede forretninger som kiosker, købmænd, supermarkeder og varehuse står for 151.000-ton pr. år.
-    <br>
-    Kilde: Kortlægning af madaffald i servicesektoren og Kortlægning af dagrenovation i Danmark
+
+<div class="madspild-info">
+    <p>Madspildet i den danske servicesektor udgør 227.000-ton pr. år. Til sammenligning er det samlede madspild fra husholdningerne 261.000-ton pr. år.</p>
+
+    <p>Det største madspild i servicesektoren stammer fra detailhandelen, der spilder 163.000 tons pr. år, svarende til 72 % af servicesektorens madspild.</p>
+
+    <p>Af detailhandelens madspild står specialforretninger som slagtere, fiskeforretninger og grønthandlere for 12.000 tons pr. år, mens ikke-specialiserede forretninger som kiosker, købmænd, supermarkeder og varehuse står for 151.000-ton pr. år.</p>
+
+    <p>Kilde: <a href="https://nyheder.tv2.dk/samfund/2014-10-08-150000-ton-mad-smides-ud-hvert-aar-se-hvem-der-smider-mest-ud" target="_blank">Kortlægning af madaffald i servicesektoren og Kortlægning af dagrenovation i Danmark</p>
+</div>
+
+<div class="centered-content">
+    <p>Kilde: <a href="https://nyheder.tv2.dk/samfund/2014-10-08-150000-ton-mad-smides-ud-hvert-aar-se-hvem-der-smider-mest-ud" target="_blank">NYHEDER.TV2.DK</a></p>
+</div>
 
 
 </body>
