Siderne er lavet

--- a/src/main/resources/templates/home/createOrganisation.html
+++ b/src/main/resources/templates/home/createOrganisation.html
@@ -4,33 +4,38 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="MyCss.css">
+    <link rel="stylesheet" type="text/css" href="createOrganisation.css">
 </head>
 <body>
 <img src="/images/logo.png" alt="Too Good To Throw Logo" class="logo">
-    <a href="/">
-        <button class="btn-index btn" id="btn-index">Til forsiden</button>
-    </a>
-<h1>Opret en overskydende madvare - organisation</h1>
-<form action="/create" method="post">
-    <label>Madnavn</label>
-    <input type="text" name="madnavn">
-    <br>
+<a href="/">
+    <button class="btn-index btn" id="btn-index">Til forsiden</button>
+</a>
+<h1>Organisation</h1>
+<h2>Sælg overskudsmad</h2>
+<h3>Her kan du tilføje de madvare din organisation ønsker at sælge.
+    <br>Hvis du har brug for yderligere assistance, ring til Danmark Mod Madspil på tlf: 60572527</br>
+</h3>
+<form class="createVirksomhed" action="/create" method="post">
+    <label>Hvad vil du sælge</label>
+    <input type="text" name="madnavn" placeholder="Fx. 10 bananer"><br>
+
     <label>Pris</label>
-    <input type="text" name="pris">
-    <br>
+    <input type="text" name="pris" placeholder="Fx. 5"><br>
+
     <label>Antal</label>
-    <input type="text" name="antal">
-    <br>
+    <input type="text" name="antal" placeholder="Fx. 3"><br>
+
     <label>Udløbsdato</label>
-    <input type="text" name="udlobsdato">
-    <br>
+    <input type="text" name="udlobsdato" placeholder="ÅÅÅÅ/MM/DD"><br>
+
     <label>Afhentningsadresse</label>
-    <input type="text" name="adresse">
-    <br>
-    <label>Organisation</label>
-    <input type="text" name="virksomhed">
-    <br>
-    <input type="submit" value="Opret overskudsmad">
+    <input type="text" name="adresse" placeholder="Fx. Rådhuspladsen 5 KBH H"><br>
+
+    <label>Virksomhedsnavn</label>
+    <input type="text" name="virksomhed" placeholder="Fx. NETTO"><br>
+
+    <input type="submit" value="Sæt til salg" class="submit-button">
 </form>
 </body>
 </html>
