Ryddet op i redundant CSS, ændret lidt i CSS, små ændringer i HTML

--- a/src/main/resources/static/createOrganisation.css
+++ b/src/main/resources/static/createOrganisation.css
@@ -52,8 +52,8 @@ h3 {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #87CEFA; /
-color: white;
+    background-color: #1971c2;
+    color: white;
     border: none;
     border-radius: 10px;
     font-weight: bold;
