--- a/src/main/resources/static/createVirksomhed.css
+++ b/src/main/resources/static/createVirksomhed.css
@@ -48,7 +48,7 @@ h2 {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #87CEFA; /
+    background-color: #1971c2;
     color: white;
     border: none;
     border-radius: 10px;
