--- a/src/main/resources/templates/home/createVirksomhed.html
+++ b/src/main/resources/templates/home/createVirksomhed.html
@@ -9,7 +9,7 @@
 <body>
 <img src="/images/logo.png" alt="Too Good To Throw Logo" class="logo">
     <a href="/">
-        <button class="btn-index btn" id="btn-index">Til forsiden</button>
+        <button class="btn-1 btn" id="btn-index">Til forsiden</button>
     </a>
 <h1>Virksomhed</h1>
 <h2>Sælg overskudsmad</h2>
