--- a/src/main/resources/templates/home/viewOneFood.html
+++ b/src/main/resources/templates/home/viewOneFood.html
@@ -21,18 +21,21 @@
         </tr>
         </thead>
         <tr>
-            <td th:text="${madvare.pris} + ' kr'"></td>
-            <td th:text="${madvare.udlobsdato}"></td>
+            <td style="text-align: left;" th:text="${#numbers.formatDecimal(madvare.pris, 1, 2)}"></td>
+            <td style="text-align: left;" th:text="${madvare.udlobsdato}"></td>
             <td th:text="${madvare.adresse}"></td>
             <td th:text="${madvare.virksomhed}"></td>
         </tr>
     </table>
     <br>
+    <br>
+    <br>
+    <div style="text-align: center;">
+        <input type="text" name="kundeNavn" placeholder="Indtast dit navn">
 
-    <input type="text" name="kundeNavn" id="" placeholder="Indtast navn">
-
-    <a th:href="@{'/deleteOneFood/' + ${madvare.id}}">
-        <button class="btn-deleteOneFood btn" id="btn-deleteOneFood">Bekræft køb af madvare</button>
-    </a>
+        <a th:href="@{'/deleteOneFood/' + ${madvare.id}}">
+            <button class="btn-deleteOneFood btn" id="btn-deleteOneFood">Bekræft køb af madvare</button>
+        </a>
+    </div>
 </body>
 </html>
