Ryddet op i redundant CSS, ændret lidt i CSS, små ændringer i HTML

--- a/src/main/resources/templates/home/viewOneFood.html
+++ b/src/main/resources/templates/home/viewOneFood.html
@@ -8,7 +8,7 @@
 <body>
 <img src="/images/logo.png" alt="Too Good To Throw Logo" class="logo">
     <a href="/">
-        <button class="btn-index btn" id="btn-index">Til forsiden</button>
+        <button class="btn-1 btn" id="btn-index">Til forsiden</button>
     </a>
     <h1 th:text="'Køb ' + ${madvare.madnavn}">Køb denne madvare</h1>
     <table>
